--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -15,6 +15,16 @@
     <link rel="stylesheet"
           href="{{ asset('vendor/jquery-datatable/fixedeader/dataTables.fixedheader.bootstrap4.min.css') }}">
     <link rel="stylesheet" href="{{ asset('vendor/sweetalert/sweetalert.css') }}"/>
+    <style>
+        .centered_container {
+            position: absolute;
+            top: 60%;
+            left: 50%;
+            -moz-transform: translateX(-50%) translateY(-50%);
+            -webkit-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
+        }
+    </style>
 {% endblock %}
 
 {% block sidebar %}
