--- a/templates/purchase/index.html.twig
+++ b/templates/purchase/index.html.twig
@@ -90,9 +90,12 @@
                     <div class="card">
                         <div class="body">
 
+                            {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') or is_granted('ROLE_SELLER') %}
                             <a href="javascript:void(0)" id="addRow" class="btn btn-primary m-b-15">
                                 <i class="icon wb-plus" aria-hidden="false"></i>{{ 'purchase_page.index.add_row'|trans }}
                             </a>
+                            {% endif %}
+
                             <div class="table-responsive">
                                 <table class="table table-bordered table-striped table-hover js-basic dataTable table-custom table-userList text-center">
                                     <thead>
@@ -103,7 +106,9 @@
                                         <th>{{ 'purchase_page.purchase_time'|trans }}</th>
                                         <th>{{ 'purchase_page.tracking_id'|trans }}</th>
                                         <th>{{ 'purchase_page.seller_id'|trans }}</th>
+                                        {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') or is_granted('ROLE_SELLER') %}
                                         <th>{{ 'purchase_page.activity'|trans }}</th>
+                                        {% endif %}
                                     </tr>
                                     </thead>
                                     <tfoot>
@@ -114,7 +119,9 @@
                                         <th>{{ 'purchase_page.purchase_time'|trans }}</th>
                                         <th>{{ 'purchase_page.tracking_id'|trans }}</th>
                                         <th>{{ 'purchase_page.seller_id'|trans }}</th>
+                                        {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') or is_granted('ROLE_SELLER') %}
                                         <th>{{ 'purchase_page.activity'|trans }}</th>
+                                        {% endif %}
                                     </tr>
                                     </tfoot>
                                     <tbody>
@@ -126,6 +133,7 @@
                                             <td>{{ p.PurchaseTime|date('Y-m-d') }}</td>
                                             <td>{{ p.TrackingId }}</td>
                                             <td>{{ p.SellerId }}</td>
+                                            {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') or is_granted('ROLE_SELLER') %}
                                             <td class="actions">
                                                 <a class="btn btn-info modify_btn">
                                                     <i class="fa fa-edit"></i>
@@ -134,6 +142,7 @@
                                                     <i class="fa fa-trash-o"></i>
                                                 </a>
                                             </td>
+                                            {% endif %}
                                         </tr>
                                     {% endfor %}
 
