--- a/templates/tracking/index.html.twig
+++ b/templates/tracking/index.html.twig
@@ -22,7 +22,6 @@
                 <p class="lead" id="tracking_form_title">{{ 'tracking_page.register'|trans }}</p>
             </div>
             <div class="body">
-
                 {{ form_start(form) }}
                 <small class="text-muted">{{ form_label(form.batch_number)}} </small>
                 <p>{{ form_widget(form.batch_number, {'attr': {'class': 'form-control'}}) }}</p>
@@ -30,7 +29,6 @@
                 <small class="text-muted">{{ form_label(form.product_id)}} </small>
                 <p>{{ form_widget(form.product_id, {'attr': {'class': 'form-control'}}) }}</p>
                 <hr>
-
                 <small class="text-muted">{{ form_label(form.production_date)}} </small>
                 <p>{{ form_widget(form.production_date, {'attr': {'class': 'form-control'}}) }}</p>
                 <hr>
@@ -120,16 +118,53 @@
 
     <div id="main-content">
         <div class="container-fluid">
+            <div class="block-header">
+                <div class="row">
+                    <div class="col-lg-6 col-md-8 col-sm-12">
+                        <h2><a href="javascript:void(0);" class="btn btn-xs btn-link btn-toggle-fullwidth"><i
+                                        class="fa fa-arrow-left"></i></a>{{ 'tracking_page.title'|trans }}</h2>
+                        <ul class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="/"><i class="icon-home"></i></a></li>
+                            <li class="breadcrumb-item active">{{ 'tracking_page.title'|trans }}</li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-6 col-md-4 col-sm-12 text-right">
+                        <div class="bh_chart hidden-xs">
+                            <div class="float-left m-r-15">
+                                <small>Visitors</small>
+                                <h6 class="mb-0 mt-1"><i class="icon-user"></i> 1,784</h6>
+                            </div>
+                            <span class="bh_visitors float-right">2,5,1,8,3,6,7,5</span>
+                        </div>
+                        <div class="bh_chart hidden-sm">
+                            <div class="float-left m-r-15">
+                                <small>Visits</small>
+                                <h6 class="mb-0 mt-1"><i class="icon-globe"></i> 325</h6>
+                            </div>
+                            <span class="bh_visits float-right">10,8,9,3,5,8,5</span>
+                        </div>
+                        <div class="bh_chart hidden-sm">
+                            <div class="float-left m-r-15">
+                                <small>Chats</small>
+                                <h6 class="mb-0 mt-1"><i class="icon-bubbles"></i> 13</h6>
+                            </div>
+                            <span class="bh_chats float-right">1,8,5,6,2,4,3,2</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="row clearfix">
                 <div class="col-lg-12">
                     <div class="card">
                         <div class="body">
-                        <a href="javascript:void(0)" id="addrow" class="btn btn-primary m-b-15">
-                            <i class="icon wb-plus" aria-hidden="false"></i>{{ 'tracking_page.add_row'|trans }}
-                        </a>
-                        <a href="javascript:void(0)" id="addbatch" class="btn btn-primary m-b-15">
-                            <i class="icon wb-plus" aria-hidden="false"></i>{{ 'tracking_page.add_batch'|trans }}
-                        </a>
+                            {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') or is_granted('ROLE_SELLER') %}
+                            <a href="javascript:void(0)" id="addrow" class="btn btn-primary m-b-15">
+                                <i class="icon wb-plus" aria-hidden="false"></i>{{ 'tracking_page.add_row'|trans }}
+                            </a>
+                            <a href="javascript:void(0)" id="addbatch" class="btn btn-primary m-b-15">
+                                <i class="icon wb-plus" aria-hidden="false"></i>{{ 'tracking_page.add_batch'|trans }}
+                            </a>
+                            {% endif %}
                             <div class="table-responsive">
                                 <table class="table table-bordered table-striped table-hover js-basic dataTable table-custom table-userList text-center">
                                     <thead>
@@ -141,7 +176,9 @@
                                         <th>{{ 'tracking_page.starting_time' | trans }}</th>
                                         <th>{{ 'tracking_page.ranch_id' | trans }}</th>
                                         <th>{{ 'tracking_page.factory' | trans }}</th>
+                                        {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') or is_granted('ROLE_SELLER') %}
                                         <th>{{ 'product_page.action' | trans }}</th>
+                                        {% endif %}
                                     </tr>
                                     </thead>
                                     <tfoot>
@@ -153,7 +190,9 @@
                                         <th>{{ 'tracking_page.starting_time' | trans }}</th>
                                         <th>{{ 'tracking_page.ranch_id' | trans }}</th>
                                         <th>{{ 'tracking_page.factory' | trans }}</th>
+                                        {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') or is_granted('ROLE_SELLER') %}
                                         <th>{{ 'product_page.action' | trans }}</th>
+                                        {% endif %}
                                     </tr>
                                     </tfoot>
                                     <tbody>
@@ -166,12 +205,14 @@
                                                 <td>{{ t.StartingTime|date('Y年m月d日h:m:s') }}</td>
                                                 <td>{{ t.RanchId }}</td>
                                                 <td>{{ t.Factory }}</td>
+                                                {% if is_granted('ROLE_SUPER_ADMIN') or is_granted('ROLE_ADMIN') or is_granted('ROLE_SELLER') %}
                                                 <td class="actions">
                                                 <a class="btn btn-info modify_btn_tracking">
                                                     <i class="fa fa-edit"></i></a>
                                                 <a href="/tracking/delete/{{ t.TrackingId }}&product" class="btn btn-danger delete_product_confirm" title="Delete">
                                                     <i class="fa fa-trash-o"></i></a>
                                                 </td>
+                                                {% endif %}
                                             </tr>
                                         {% endfor %}
                                     </tbody>
@@ -259,6 +300,7 @@
             $('#popupBox').fadeIn('fast');
             $('#popupContent').fadeIn('fast');
         });
+
         $('#overlay, #popupCancel').click(function () {
             $('#overlay').fadeOut('fast');
             $('#popupBox').fadeOut('fast');
