[UMS-41]批量修改溯源信息
添加溯源批量信息界面

--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -98,7 +98,7 @@
                                     {% for p in products %}
                                         <tr class="gradeA">
                                             <td>{{ p.ProductId }}</td>
-                                            <td>{{ p.ProductName }}</td>
+                                            <td><a href="/product/show/{{ p.ProductId }}&product" >{{ p.ProductName }}</a></td>
                                             <td>{{ p.Barcode }}</td>
                                             <td>
                                                 <img src="{{ asset('/uploads/images/products/' ~ p.ImagePath)}}" height="42" width="42"/>
